--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -31,6 +31,7 @@
 	--overflow: visible;
 	--transition: 0;
 	--gap: var( --widgets-spacing, 20px ); // Use the gap from `Site Settings` or default to 20px.
+
 	--overlay-mix-blend-mode: initial;
 	--overlay-opacity: 1;
 	--overlay-transition: 0.3s;
@@ -42,7 +43,6 @@
 	// Set `min-width` to fix nested Containers shrink bug (ED-4964).
 	// Ref: https://stackoverflow.com/questions/43934648/how-to-make-flexbox-items-shrink-correctly-when-in-a-nested-container
 	min-width: 0;
-	min-height: var( --min-height );
 	height: var( --height );
 	border-radius: var( --border-radius );
 	margin: var( --margin-top ) var( --margin-right ) var( --margin-bottom ) var( --margin-left );
@@ -56,12 +56,19 @@
 
 	&, & > .e-container-boxed--inner {
 		display: var( --display );
+		min-height: var( --min-height );
 		text-align: var( --text-align );
 	}
 
 	&-boxed--inner {
 		flex-direction: var( --flex-direction );
 		flex-grow: var( --flex-grow );
+		flex-wrap: var( --flex-wrap );
+		justify-content: var( --justify-content );
+		align-items: var( --align-items );
+		align-content: var( --align-content );
+		gap: var( --gap );
+		align-self: var( --align-self );
 		width: 100%;
 		max-width: var( --content-width );
 		margin-inline: auto;
