--- a/assets/dev/scss/admin/_new-template-dialog.scss
+++ b/assets/dev/scss/admin/_new-template-dialog.scss
@@ -162,10 +162,7 @@
 			margin-top: 24px;
 			box-sizing: border-box;
 			text-align: center;
-		}
-
-		&__lock_button {
-			text-transform: none; // TODO: Check with the design if it's required.
+			text-transform: none;
 		}
 	}
 }
