--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -3,12 +3,8 @@
 	--border-radius: 0;
 	--display: flex;
 	--flex-direction: column;
-	// Additional `flex-direction` value, which is used to set set a default value for the parent container.
-	--container-flex-direction: initial;
 	--flex-basis: auto;
 	--flex-grow: 0;
-	// Additional `flex-grow` value, which is used to set set a default value for the parent container.
-	--container-flex-grow: initial;
 	--flex-shrink: 1;
 	// Use the width from `Site Settings` or default to 1140px.
 	// Take the smaller value in order to fix bug ED-6712 where the content-width (AKA "padding hack", see below)
@@ -36,9 +32,8 @@
 	--overlay-opacity: 1;
 	--overlay-transition: 0.3s;
 
+	flex: var( --flex-grow ) var( --flex-shrink ) var( --flex-basis );
 	position: var( --position );
-	flex-direction: var( --container-flex-direction, var( --flex-direction ) );
-	flex: var( --container-flex-grow, var( --flex-grow ) ) var( --flex-shrink ) var( --flex-basis );
 	width: var( --width );
 	// Set `min-width` to fix nested Containers shrink bug (ED-4964).
 	// Ref: https://stackoverflow.com/questions/43934648/how-to-make-flexbox-items-shrink-correctly-when-in-a-nested-container
@@ -54,25 +49,41 @@
 	overflow: var( --overflow );
 	transition: var( --transition );
 
-	&, & > .e-container__inner {
-		display: var( --display );
-		min-height: var( --min-height );
+	&--width-full, & > .e-container__inner {
+		flex-direction: var( --flex-direction );
 		text-align: var( --text-align );
 	}
 
-	&__inner {
-		flex-direction: var( --flex-direction );
-		flex-grow: var( --flex-grow );
+	&, & > .e-container__inner {
+		display: var( --display );
+		min-height: var( --min-height );
+	}
+
+	// Set default values to the parent container of the boxed container (ED-7867).
+	&--width-boxed {
+		flex-direction: initial;
+		text-align: initial;
+		flex-wrap: initial;
+		justify-content: initial;
+		align-items: initial;
+		align-content: initial;
+		gap: initial;
+	}
+
+	& > .e-container__inner {
 		flex-wrap: var( --flex-wrap );
 		justify-content: var( --justify-content );
 		align-items: var( --align-items );
 		align-content: var( --align-content );
 		gap: var( --gap );
-		align-self: var( --align-self );
 		width: 100%;
 		max-width: var( --content-width );
 		margin-inline: auto;
 		height: 100%;
+		flex-basis: initial;
+		flex-grow: initial;
+		flex-shrink: initial;
+		align-self: initial;
 	}
 
 	:is( .elementor-section-wrap, [data-elementor-id] ) > & {
