--- a/assets/dev/scss/editor/preview/preview.scss
+++ b/assets/dev/scss/editor/preview/preview.scss
@@ -2,6 +2,8 @@
 @import "../../helpers/mixins";
 @import "../../helpers/direction";
 
+@import "container";
+
 @import "../units";
 @import "../breakpoints";
 @import "../dynamic-tags";
