--- a/assets/dev/scss/frontend/widgets/divider.scss
+++ b/assets/dev/scss/frontend/widgets/divider.scss
@@ -137,11 +137,28 @@
 	direction: rtl;
 }
 
-.e-container {
+.elementor {
 
-	& > .elementor-widget-divider {
-		// Fix - Divider widget has undefined width and height issues inside the flex container (ED-7722).
-		width: var( --container-widget-width, 100% );
-		flex-grow: 1;
+	.elementor-element {
+
+		&.elementor-section {
+
+			.elementor-divider-separator {
+				width: var( --divider-width, 100% );
+			}
+		}
+
+		&.e-container {
+
+			.elementor-widget-divider {
+				// Fix - Divider widget has undefined width and height issues inside the flex container (ED-7722 & ED-7869).
+				width: var( --divider-width, 100% );
+			}
+
+			.elementor-divider-separator {
+				width: 100%;
+			}
+		}
 	}
-}
+} 
+
