--- a/assets/dev/scss/editor/preview/preview.scss
+++ b/assets/dev/scss/editor/preview/preview.scss
@@ -2,7 +2,7 @@
 @import "../../helpers/mixins";
 @import "../../helpers/direction";
 
-@import "container";
+@import "../container";
 
 @import "../units";
 @import "../breakpoints";
