--- a/assets/dev/scss/frontend/widgets/divider.scss
+++ b/assets/dev/scss/frontend/widgets/divider.scss
@@ -140,8 +140,9 @@
 .e-container {
 
 	& > .elementor-widget-divider {
-		// Fix - Divider widget has undefined width and height issues inside the flex container (ED-7722 & ED-7869).
+		// Fix - Divider widget has undefined width and height issues inside the flex container (ED-7722).
 		width: var( --container-widget-width, 100% );
-		--flex-grow: var(--container-widget-flex-grow);
+		// Fix - Set default `--flex-grow` values for the seperate `flex-direction` options (ED-7869).
+		--flex-grow: var(--container-widget-flex-grow, 0);
 	}
 }
