--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -53,6 +53,7 @@
 	z-index: var( --z-index );
 	overflow: var( --overflow );
 	transition: var( --transition );
+	isolation: isolate;
 
 	:is( .elementor-section-wrap, [data-elementor-id] ) > & {
 		// Default top-level containers to be centered.
@@ -153,7 +154,7 @@
 		content: var( --background-overlay );
 		display: block;
 		position: absolute;
-		z-index: $ground-layer;
+		z-index: $under-layer;
 		width: 100%;
 		height: 100%;
 		left: 0;
@@ -166,7 +167,7 @@
 
 	.elementor-background-video-container,
 	.elementor-background-slideshow {
-		z-index: $under-layer;
+		z-index: calc( $under-layer - 1 );
 	}
 
 	.elementor-widget {
