Tweak: Update pro promotion button in plugin Core onboarding [ED-7959]

--- a/core/app/modules/onboarding/assets/js/components/layout/header.scss
+++ b/core/app/modules/onboarding/assets/js/components/layout/header.scss
@@ -36,6 +36,20 @@
 		.eicon-pro-icon {
 			color: $brand-color-dark-pink;
 		}
+
+		&.onboarding-go-pro__btn {
+			background-color: $platform-accent;
+			color: $white;
+			padding: 4px 8px;
+			border-radius: 4px;
+			font-weight: 700;
+			font-size: 12px;
+			transition: 0.5s;
+
+			&:hover {
+			  	background-color: $platform-accent-hover;
+			}
+		}
 	}
 }
 
