Tweak: Improve the UX of dependencies between experiments [ED-7494]

--- a/assets/dev/scss/global/_dialog.scss
+++ b/assets/dev/scss/global/_dialog.scss
@@ -139,6 +139,16 @@
 	}
 }
 
+#e-experiments-dependency-dialog {
+	.dialog-confirm-header {
+		font-weight: 600;
+	}
+
+	.dialog-ok {
+		color: $editor-success;
+	}
+}
+
 
 .dialog-prevent-scroll {
 	overflow: hidden;
