Tweak: Increase inputs in the Replace URL tool to support long URLs (#19559)

--- a/assets/dev/scss/admin/_tools.scss
+++ b/assets/dev/scss/admin/_tools.scss
@@ -8,9 +8,18 @@
 	}
 }
 
-#elementor_rollback,
-#elementor_rollback_pro,
 #elementor_replace_url {
+	> div {
+		max-width: 800px;
+
+		input {
+			margin-bottom: 6px;
+		}
+	}
+}
+
+#elementor_rollback,
+#elementor_rollback_pro {
 	> div {
 		display: flex;
 
