--- a/core/app/modules/onboarding/assets/js/components/layout/header.scss
+++ b/core/app/modules/onboarding/assets/js/components/layout/header.scss
@@ -33,8 +33,18 @@
 	.eps-button {
 		color: $platform-darkest-gray;
 
-		.eicon-pro-icon {
-			color: $brand-color-dark-pink;
+		&__go-pro-btn {
+			background-color: $platform-accent;
+			color: $white;
+			padding: 4px 8px;
+			border-radius: 4px;
+			font-weight: 700;
+			font-size: 12px;
+			transition: 0.5s;
+
+			&:hover {
+			  	background: lighten($platform-accent, 10%)
+			}
 		}
 	}
 }
