--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -164,7 +164,7 @@
 
 	&.e-container--column {
 
-		& > .elementor-widget-placeholder {
+		> .elementor-widget-placeholder {
 			height: var( --size );
 			// To make sure that it doesn't push & break the layout when appearing.
 			margin-block-start: var( --margin-start );
@@ -284,7 +284,6 @@
 	// TODO: Find a better solution.
 	& > &, &__inner > &, .elementor-widget & {
 		> .elementor-element-overlay {
-			opacity: 8;
 
 			.elementor-editor-element-setting {
 				position: relative;
