--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -187,13 +187,13 @@
 			&, & > .e-container__inner {
 
 				> .elementor-widget-placeholder {
-					// margin-block-start: 0;
-					// margin-block-end: 0;
 					height: var( --size );
 					// To make sure that it doesn't push & break the layout when appearing.
 					margin-block-start: var( --margin-start );
 					margin-block-end: var( --margin-end );
 					animation-name: dnd-placeholder-widget-horizontal;
+					margin-block-start: 0;
+					margin-block-end: 0;
 				}
 			}
 		}
