Allow collapsing of empty columns by filling `--fr-unit` variable
Fixes #13558

Co-authored-by: Gifford Nowland <hi@giffordnowland.com>

--- a/assets/dev/scss/frontend/_grid.scss
+++ b/assets/dev/scss/frontend/_grid.scss
@@ -355,7 +355,7 @@ ul.elementor-icon-list-items.elementor-inline-items {
 
 			&#{$device}-#{$i} {
 				.elementor-grid {
-					grid-template-columns: repeat(#{$i} , 1fr);
+					grid-template-columns: repeat(var(--fit, $i), var(--fr-unit, 1fr));
 				}
 			}
 		}
