Tweak: Changed Full-width and Boxed content width functionality in Container [ed-7867] (#19385)

--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -182,13 +182,15 @@
 	--order: initial;
 	--align-self: initial;
 
-	// Flex container.
-	flex-direction: var( --flex-direction );
-	flex-wrap: var( --flex-wrap );
-	justify-content: var( --justify-content );
-	align-items: var( --align-items );
-	align-content: var( --align-content );
-	gap: var( --gap );
+	&:where( .e-container--width-full, .elementor-widget ) {
+		// Flex container.
+		flex-direction: var( --flex-direction );
+		flex-wrap: var( --flex-wrap );
+		justify-content: var( --justify-content );
+		align-items: var( --align-items );
+		align-content: var( --align-content );
+		gap: var( --gap );
+	}
 
 	// Flex item.
 	flex-basis: var( --flex-basis );
