--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -27,15 +27,11 @@
 	--overflow: visible;
 	--transition: 0;
 	--gap: var( --widgets-spacing, 20px ); // Use the gap from `Site Settings` or default to 20px.
-
 	--overlay-mix-blend-mode: initial;
 	--overlay-opacity: 1;
 	--overlay-transition: 0.3s;
 
 	position: var( --position );
-	display: var( --display );
-	text-align: var( --text-align );
-	flex-direction: var( --flex-direction );
 	flex: var( --flex-grow ) var( --flex-shrink ) var( --flex-basis );
 	width: var( --width );
 	// Set `min-width` to fix nested Containers shrink bug (ED-4964).
@@ -45,15 +41,56 @@
 	height: var( --height );
 	border-radius: var( --border-radius );
 	margin: var( --margin-top ) var( --margin-right ) var( --margin-bottom ) var( --margin-left );
-	// Custom content-width hack.
-	padding-left: Max( var( --padding-left ), calc( ( 100% - var( --content-width ) ) / 2 ) );
-	padding-right: Max( var( --padding-right ), calc( ( 100% - var( --content-width ) ) / 2 ) );
-	padding-top: var( --padding-top );
-	padding-bottom: var( --padding-bottom );
+	padding-left: var( --padding-left );
+	padding-right: var( --padding-right );
 	z-index: var( --z-index );
 	overflow: var( --overflow );
 	transition: var( --transition );
 	isolation: isolate;
+
+	&--width-full,
+	& > .e-container__inner {
+		flex-direction: var( --flex-direction );
+		text-align: var( --text-align );
+		padding-top: var( --padding-top );
+		padding-bottom: var( --padding-bottom );
+	}
+
+	&,
+	& > .e-container__inner {
+		display: var( --display );
+	}
+
+	// Set default values to the outer div of the boxed container.
+	&--width-boxed {
+		flex-direction: column;
+		text-align: initial;
+		flex-wrap: initial;
+		justify-content: initial;
+		align-items: initial;
+		align-content: initial;
+		gap: initial;
+	}
+
+	& > .e-container__inner {
+		flex-wrap: var( --flex-wrap );
+		justify-content: var( --justify-content );
+		align-items: var( --align-items );
+		align-content: var( --align-content );
+		gap: var( --gap );
+		width: 100%;
+		max-width: var( --content-width );
+		margin: 0 auto;
+		padding-inline: 0;
+		height: 100%;	
+
+		// Set default values to the inner div of the boxed container.
+		flex-basis: initial;
+		// Ensure that the inner div covers the full height of the container.
+		flex-grow: 1;
+		flex-shrink: initial;
+		align-self: initial;
+	}
 
 	:is( .elementor-section-wrap, [data-elementor-id] ) > & {
 		// Default top-level containers to be centered.
@@ -92,45 +129,75 @@
 	}
 
 	&.e-container--row {
-		& > .elementor-widget-placeholder {
-			position: relative;
-			z-index: $editor-layer; // To put it above the element overlay.
-			width: var( --size );
-			// To make sure that it doesn't push & break the layout when appearing.
-			margin-inline-start: var( --margin-start );
-			height: auto;
-			min-height: 100%;
-			animation-name: dnd-placeholder-widget-vertical;
-			animation-fill-mode: both;
+
+		&,
+		& > .e-container__inner {
+
+			> .elementor-widget-placeholder {
+				position: relative;
+				z-index: $editor-layer; // To put it above the element overlay.
+				width: var( --size );
+				// To make sure that it doesn't push & break the layout when appearing.
+				margin-inline-start: var( --margin-start );
+				height: auto;
+				min-height: 100%;
+				animation-name: dnd-placeholder-widget-vertical;
+				animation-fill-mode: both;
+			}
 		}
 
 		// Fix nested Containers DnD issues (ED-5424).
 		&[data-nesting-level]:not( [data-nesting-level = "0"] ) {
-			// Any placeholder which is not on first widget.
-			> .elementor-widget-placeholder {
-				margin-inline-end: 0;
-				margin-inline-start: calc( var( --margin-start ) + var( --margin-end ) );
-			}
 
-			// Placeholder on first widget.
-			> :not( .elementor-element ) + .elementor-widget-placeholder {
-				margin-inline-end: var( --margin-end );
-				margin-inline-start: var( --margin-start );
+			&,
+			& > .e-container__inner {
+
+				// Any placeholder which is not on first widget.
+				> .elementor-widget-placeholder {
+					margin-inline-end: 0;
+					margin-inline-start: calc( var( --margin-start ) + var( --margin-end ) );
+				}
+	
+				// Placeholder on first widget.
+				> :not( .elementor-element ) + .elementor-widget-placeholder {
+					margin-inline-end: var( --margin-end );
+					margin-inline-start: var( --margin-start );
+				}
 			}
 		}
 	}
 
-	&.e-container--column > .elementor-widget-placeholder {
-		height: var( --size );
-		// To make sure that it doesn't push & break the layout when appearing.
-		margin-block-start: var( --margin-start );
-		margin-block-end: var( --margin-end );
-		animation-name: dnd-placeholder-widget-horizontal;
+	&.e-container--column {
 
-		// Hack to fix placeholder placement in Chrome when it's last (ED-5486).
-		&:nth-last-child( 2 ) {
-			margin-block-start: calc( 2 * var( --margin-start ) );
-			--margin-end: 0;
+		&,
+		& > .e-container__inner {
+
+			> .elementor-widget-placeholder {
+				height: var( --size );
+				// To make sure that it doesn't push & break the layout when appearing.
+				margin-block-start: var( --margin-start );
+				margin-block-end: var( --margin-end );
+				animation-name: dnd-placeholder-widget-horizontal;
+			}
+		}
+
+		> .elementor-widget-placeholder {
+
+			// Hack to fix placeholder placement in Chrome when it's last (ED-5486).
+			&:nth-last-child( 2 ) {
+				margin-block-start: calc( 2 * var( --margin-start ) );
+				--margin-end: 0;
+			}
+		}
+
+		& > .e-container__inner {
+
+			> .elementor-widget-placeholder {
+
+				&:last-child {
+					--margin-end: 0;
+				}
+			}
 		}
 	}
 
@@ -190,18 +257,26 @@
 		}
 	}
 
-	& > .elementor-widget {
+	&,
+	& > .e-container__inner {
 
-		& > .elementor-widget-container {
-			// Fix align-self:stretch (ED-7359)
-			height: 100%;
+		& > .elementor-widget {
+
+			& > .elementor-widget-container {
+				// Fix align-self:stretch (ED-7359)
+				height: 100%;
+			}
 		}
 	}
 
 	// Inner Container handle.
 	// TODO: Find a better solution.
-	& > &, .elementor-widget & {
+	& > &,
+	&__inner > &,
+	.elementor-widget & {
+
 		> .elementor-element-overlay {
+
 			.elementor-editor-element-setting {
 				position: relative;
 				background-color: $editor-darker;
@@ -260,8 +335,8 @@
 
 	.elementor & {
 
-		// Hack to increase specificity and avoid using `!important`.
-		&.e-container {
+		&,
+		& > .e-container__inner {
 
 			// This was done to make sure that the widgets inside containers do not exceed the container's max width.
 			& > .elementor-widget {
