inner container class added to widget files

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -349,7 +349,11 @@
 @media ( max-width: $editor-screen-sm-max ) {
 	.e-container {
 		--width: 100%;
-		--flex-wrap: wrap;
+
+		&--width-full,
+		&__inner {
+			--flex-wrap: wrap;
+		}
 	}
 }
 
