--- a/assets/dev/scss/frontend/widgets/toggle.scss
+++ b/assets/dev/scss/frontend/widgets/toggle.scss
@@ -79,7 +79,8 @@
 	}
 }
 
-.e-container {
+.e-container,
+.e-container__inner {
 
 	> .elementor-widget-toggle {
 		// Fix - Toggle widget disappears because the 'flex column' setting causes an undefined width inside the flex container (ED-7524).
