--- a/assets/dev/scss/frontend/widgets/video.scss
+++ b/assets/dev/scss/frontend/widgets/video.scss
@@ -48,7 +48,8 @@
 	}
 }
 
-.e-container {
+.e-container,
+.e-container__inner {
 
 	> .elementor-widget-video {
 		// Fix - Video widget has an undefined height on mobile using 'flex column wrap' inside the flex container (ED-7604).
