--- a/assets/dev/scss/editor/panel/_controls.scss
+++ b/assets/dev/scss/editor/panel/_controls.scss
@@ -286,6 +286,7 @@
 
 			> .elementor-control-input-wrapper {
 				width: 100%;
+				max-width: 100%;
 				margin-top: 10px;
 
 				// TODO: Hack to make choices full width when label is block.
