--- a/assets/dev/scss/editor/panel/_menu.scss
+++ b/assets/dev/scss/editor/panel/_menu.scss
@@ -25,7 +25,6 @@
 	&-item {
 		display: flex;
 		align-items: center;
-		padding: 10px;
 		width: 100%;
 		height: 40px;
 		cursor: pointer;
@@ -39,6 +38,7 @@
 		&-icon {
 			text-align: center;
 			width: 30px;
+		  	padding: 10px 0 10px 10px;
 			margin-inline-end: 10px;
 			color: $editor-light;
 			font-size: 19px;
@@ -63,7 +63,12 @@
 		}
 
 		a {
+		  	display: flex;
+		  	align-items: center;
 			color: $editor-dark;
+		  	width: 100%;
+		  	height: 100%;
+		  	padding: 10px 10px 10px 0;
 		}
 
 		&-exit {
