Site settings style & polish

--- a/assets/dev/scss/editor/panel/_panel.scss
+++ b/assets/dev/scss/editor/panel/_panel.scss
@@ -80,6 +80,9 @@
 	// Element Edit
     @import "element-settings";
 
+	// Site Settings
+	@import "site-settings";
+
     //Footer
     @import "footer";
 }
