--- a/assets/dev/scss/editor/panel/_menu.scss
+++ b/assets/dev/scss/editor/panel/_menu.scss
@@ -38,8 +38,9 @@
 		&-icon {
 			text-align: center;
 			width: 30px;
-		  	padding: 10px 0 10px 10px;
-			margin-inline-end: 10px;
+		  	flex-shrink: 0;
+		  	padding: 10px 0;
+			margin-inline-start: 10px;
 			color: $editor-light;
 			font-size: 19px;
 
@@ -54,7 +55,7 @@
 			font-weight: 500;
 
 			&-badge {
-				margin-inline-start: auto;
+				padding-inline-start: auto;
 			}
 
 			> span {
@@ -68,7 +69,8 @@
 			color: $editor-dark;
 		  	width: 100%;
 		  	height: 100%;
-		  	padding: 10px 10px 10px 0;
+			padding-inline-start: 10px;
+		  	padding: 10px 0;
 		}
 
 		&-exit {
