--- a/assets/dev/scss/editor/panel/_menu.scss
+++ b/assets/dev/scss/editor/panel/_menu.scss
@@ -25,7 +25,6 @@
 	&-item {
 		display: flex;
 		align-items: center;
-		padding: 10px;
 		width: 100%;
 		height: 40px;
 		cursor: pointer;
@@ -39,7 +38,9 @@
 		&-icon {
 			text-align: center;
 			width: 30px;
-			margin-inline-end: 10px;
+		  	flex-shrink: 0;
+		  	padding: 10px 0;
+			margin-inline-start: 10px;
 			color: $editor-light;
 			font-size: 19px;
 
@@ -52,9 +53,12 @@
 			display: flex;
 			flex-grow: 1;
 			font-weight: 500;
+			justify-content: space-between;
 
 			&-badge {
-				margin-inline-start: auto;
+				margin: 0 10px;
+			  	background: #FFFFFFFF;
+			  	border-radius: 3px;
 			}
 
 			> span {
@@ -63,7 +67,13 @@
 		}
 
 		a {
+		  	display: flex;
+		  	align-items: center;
 			color: $editor-dark;
+		  	width: 100%;
+		  	height: 100%;
+			padding-inline-start: 10px;
+		  	padding: 10px 0;
 		}
 
 		&-exit {
