--- a/assets/dev/scss/frontend/widgets/spacer.scss
+++ b/assets/dev/scss/frontend/widgets/spacer.scss
@@ -5,9 +5,12 @@
 	}
 }
 
+.e-container {
+	--container-widget-width: 100%;
+}
+
 .e-container,
 .e-container__inner {
-	--container-widget-width: 100%;
 
 	& > .elementor-widget-spacer {
 		width: var( --container-widget-width, var( --spacer-size ) );
