Tweak:  Adjust the tag display in the experiments screens [D-8277]

--- a/assets/dev/scss/admin/_experiments.scss
+++ b/assets/dev/scss/admin/_experiments.scss
@@ -5,6 +5,7 @@
 		display: flex;
 		align-items: flex-start;
 		flex-wrap: wrap;
+		flex-direction: column;
 
 		&__indicator {
 			position: absolute;
