Tweak:  Adjust the tag display in the experiments screens [ED-8277] (#19846)

--- a/assets/dev/scss/admin/_experiments.scss
+++ b/assets/dev/scss/admin/_experiments.scss
@@ -4,7 +4,7 @@
 	&__title {
 		display: flex;
 		align-items: flex-start;
-		flex-wrap: wrap;
+		flex-direction: column;
 
 		&__indicator {
 			position: absolute;
