--- a/packages/editor/examples/src/assets/eicons/css/elementor-icons.css
+++ b/packages/editor/examples/src/assets/eicons/css/elementor-icons.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'eicons';
-  src: url("../fonts/eicons.eot?5.16.0");
-  src: url("../fonts/eicons.eot?5.16.0#iefix") format("embedded-opentype"), url("../fonts/eicons.woff2?5.16.0") format("woff2"), url("../fonts/eicons.woff?5.16.0") format("woff"), url("../fonts/eicons.ttf?5.16.0") format("truetype"), url("../fonts/eicons.svg?5.16.0#eicon") format("svg");
+  src: url("../fonts/eicons.woff2?5.16.0") format("woff2");
   font-weight: normal;
   font-style: normal; }
 
