--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -182,6 +182,15 @@
 	--order: initial;
 	--align-self: initial;
 
+	&:where( .elementor-section ) {
+
+		// Keep original specificity.
+		.elementor-element.elementor-widget {
+			width: var( --widget-width, 100% );
+			max-width: var( --widget-width, 100% );
+		}
+	}
+
 	&:where( .e-container--width-full, .elementor-widget ) {
 		// Flex container.
 		flex-direction: var( --flex-direction );
