--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -136,6 +136,20 @@
 		// Fix swiper-based widgets (ED-6716).
 		// Since the default is `min-width: auto` for flex items.
 		min-width: 0;
+
+		// Fix iframe-based widgets (ED-5338).
+		// TODO: Find a better solution.
+		&-video,
+		&-google_maps {
+			flex-basis: 100%;
+		}
+
+		// Fix swiper-based widgets broken (ED-6849).
+		// TODO: Use `:has( .swiper-container )` selector when available && remove this class from `frontend/utils/swiper.js`.
+		&.e-widget-swiper {
+			max-width: 100%;
+			flex-basis: 100%;
+		}
 	}
 
 	&,
@@ -156,7 +170,7 @@
 	
 		// This was done to make sure that the widgets inside containers do not exceed the container's max width.
 		& > .elementor-widget {
-			width: var( --widget-width, 100% );
+			width: var( --widget-width, initial );
 			max-width: 100%;
 		}
 	}
