Fix: Container - Apply inner container class to widgets inside the container [ED-8137] (#19686)

--- a/assets/dev/scss/frontend/widgets/spacer.scss
+++ b/assets/dev/scss/frontend/widgets/spacer.scss
@@ -7,6 +7,10 @@
 
 .e-container {
 	--container-widget-width: 100%;
+}
+
+.e-container,
+.e-container__inner {
 
 	& > .elementor-widget-spacer {
 		width: var( --container-widget-width, var( --spacer-size ) );
