--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -141,13 +141,13 @@
 		&-video,
 		&-google_maps,
 		&-empty {
-			--widget-width: 100%;
+			width: 100%;
 		}
 
 		// Fix swiper-based widgets broken (ED-6849).
 		// TODO: Use `:has( .swiper-container )` selector when available && remove this class from `frontend/utils/swiper.js`.
 		&.e-widget-swiper {
-			--widget-width: 100%;
+			width: 100%;
 		}
 	}
 
@@ -169,7 +169,6 @@
 	
 		// This was done to make sure that the widgets inside containers do not exceed the container's max width.
 		& > .elementor-widget {
-			width: var( --widget-width, initial );
 			max-width: 100%;
 		}
 	}
