--- a/assets/dev/scss/frontend/widgets/divider.scss
+++ b/assets/dev/scss/frontend/widgets/divider.scss
@@ -137,8 +137,8 @@
 	direction: rtl;
 }
 
-.e-container,
-.e-container__inner {
+.e-con,
+.e-con-inner {
 
 	& > .elementor-widget-divider {
 		// Fix - Divider widget has undefined width and height issues inside the flex container (ED-7722).
